# homework_10_web_correct

django_project/: pyproject.toml
django_project/quotes/quotes/: settings.py
django_project/quotes/users/: forms.py  urls.py  views.py
