[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["pawelzajac95 <pawelzajac34@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
